--- a/client/index.html
+++ b/client/index.html
@@ -81,12 +81,12 @@
         <div class = "row px-4 py-1">
             
             <!-- WARNING ALERT -->
-            <!-- <div id="alertBox" class="text-center alert alert-dark alert-dismissible fade show " role="alert">
+            <div id="alertBox" class="text-center alert alert-dark alert-dismissible fade show " role="alert">
                 <strong id="alertMessage">⚠️ Liquidation Warning!</strong>
                 <button type="button" class="btn btn-danger btn ms-3" onclick="stopTwilioCall()">Stop Call</button>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-                 -->
+                
         </div>
 
         <div class = "row px-4" >
@@ -542,9 +542,12 @@
                                             .then((result) =>
                                                 {
                                                 console.log(result)
-                                                if (result.status == "INACTIVE"){
-                                                    console.log("INACTIVE")
+                                                if (result.status == "INACTIVE"|result.status == "ACTIVE_ACKED"){
+                                                    console.log(result.status)
                                                     document.getElementById('alertBox').style.display = "None"
+                                                }else{
+                                                    document.getElementById('alertBox').style.display = "block"
+
                                                 }
 
                                                 // if (result['answered'] || result['running']) {
@@ -618,7 +621,7 @@
 
 
 
-                            <div class="table-responsive" style="max-height: 400px; overflow-y: auto;">
+                            <div class="table-responsive" style="max-height: auto; overflow-y: auto;">
                                 <table class="table table-hover table-sm align-middle text-nowrap w-100 algo-table ">
                                     <thead class="table sticky-top ">
                                         <tr>
