--- a/client/index.html
+++ b/client/index.html
@@ -545,9 +545,10 @@
                                                 if (result.status == "INACTIVE"|result.status == "ACTIVE_ACKED"){
                                                     console.log(result.status)
                                                     document.getElementById('alertBox').style.display = "None"
+                                                    // document.getElementById('alertBox').style.display = "block"
+
                                                 }else{
                                                     document.getElementById('alertBox').style.display = "block"
-
                                                 }
 
                                                 // if (result['answered'] || result['running']) {
