Update deribiti connector

--- a/client/index.html
+++ b/client/index.html
@@ -649,7 +649,7 @@
                                 </div> -->
                                 <table class="table table-hover table-sm align-middle text-nowrap w-100 border rounded shadow-sm algo-table">
                                     <thead class="table-light sticky-top">
-                                        <tr class="text-uppercase small text-secondary">
+                                        <tr class="text-uppercase small ">
                                             <th class="py-2 px-3">Algo Name</th>
                                             <th class="py-2 px-3">Lead / Lag</th>
                                             <th class="py-2 px-3">Spread / Qty</th>
@@ -661,7 +661,7 @@
                                         </tr>
                                     </thead>
                                     <tbody id="algo-list"></tbody>
-                                    <tbody id="algo-list-new"></tbody>
+                                    <tbody id="algo-list-new" ></tbody>
                                 </table>
                                 
 
@@ -1210,6 +1210,7 @@
                 width: 25%; /* Adjust based on the number of columns */
                 overflow: hidden;
                 text-overflow: ellipsis;
+                /* text-align: center; */
             }
             
             .btn{
