Update deribit connectors

--- a/client/index.html
+++ b/client/index.html
@@ -627,10 +627,10 @@
                                 <!-- Algo List Table -->
                             <section class="intro">
 
-                                <!-- <div class="table-responsive" style="max-height: auto; overflow-y: auto;">
+                                <div class="table-responsive" style="max-height: auto; overflow-y: auto;">
                                     <table class="table table-hover table-sm align-middle text-nowrap w-100 algo-table ">
-                                        <thead class="table sticky-top ">
-                                            <tr>
+                                        <thead class="table-light sticky-top ">
+                                            <tr class="text-uppercase small ">
                                                 <th class='' >Algo Name</th>
                                                 <th class='' >Lead | Lag</th>
                                                 <th class='' >Spread | Qty</th>
@@ -646,8 +646,9 @@
                                         <tbody id="algo-list-new">
                                         </tbody>
                                     </table>
-                                </div> -->
-                                <table class="table table-hover table-sm align-middle text-nowrap w-100 border rounded shadow-sm algo-table">
+                                </div>
+                                
+                                <!-- <table class="table table-hover table-sm align-middle text-nowrap w-100 border rounded shadow-sm algo-table" style="max-height: auto; overflow-y: auto;">
                                     <thead class="table-light sticky-top">
                                         <tr class="text-uppercase small ">
                                             <th class="py-2 px-3">Algo Name</th>
@@ -662,7 +663,7 @@
                                     </thead>
                                     <tbody id="algo-list"></tbody>
                                     <tbody id="algo-list-new" ></tbody>
-                                </table>
+                                </table> -->
                                 
 
                             </section> 
