--- a/client/index.html
+++ b/client/index.html
@@ -627,26 +627,25 @@
                                 <!-- Algo List Table -->
                             <section class="intro">
 
-                                <div class="table-responsive" style="max-height: auto; overflow-y: auto;">
-                                    <table class="table table-hover table-sm align-middle text-nowrap w-100 algo-table ">
-                                        <thead class="table-light sticky-top ">
-                                            <tr class="text-uppercase small ">
-                                                <th class='' >Algo Name</th>
-                                                <th class='' >Lead | Lag</th>
-                                                <th class='' >Spread | Qty</th>
-                                                <th class='' >Currency</th>
-                                                <th class='' >Instrument | Contract</th>
-                                                <th class='' >Status</th>
-                                                <th class='' >On / Off</th>
-                                                <th class='' >Actions</th>
+                                <div class="table-responsive" style="max-height: 520px; overflow-y: auto;">
+                                    <table class="table table-hover table-sm align-middle text-nowrap w-100 algo-table">
+                                        <thead class="table-light sticky-top">
+                                            <tr class="text-uppercase small">
+                                                 <th class="py-2 px-3">Algo Name</th>
+                                                <th class="py-2 px-3">Lead / Lag</th>
+                                                <th class="py-2 px-3">Spread / Qty</th>
+                                                <th class="py-2 px-3">Currency</th>
+                                                <th class="py-2 px-3">Instrument / Contract</th>
+                                                <th class="py-2 px-3">Status</th>
+                                                <th class="py-2 px-3">On / Off</th>
+                                                <th class="py-2 px-3">Actions</th>
                                             </tr>
                                         </thead>
-                                        <tbody id="algo-list">
-                                        </tbody>
-                                        <tbody id="algo-list-new">
-                                        </tbody>
+                                        <tbody id="algo-list"></tbody>
+                                        <tbody id="algo-list-new"></tbody>
                                     </table>
                                 </div>
+                                
                                 
                                 <!-- <table class="table table-hover table-sm align-middle text-nowrap w-100 border rounded shadow-sm algo-table" style="max-height: auto; overflow-y: auto;">
                                     <thead class="table-light sticky-top">
