Update deribit positions

--- a/client/index.html
+++ b/client/index.html
@@ -251,11 +251,11 @@
                                     <div  class ='fw-bold header-text px-1' >DERIBIT</div>
                                   </div>
 
-                                <span id="fundingratets-deribit" class="badge  bg-opacity-10 text-warning small">-</span>
+                                <span id="fundingratets-deribitperp" class="badge  bg-opacity-10 text-warning small">-</span>
                             </div>
                             <div class="d-flex justify-content-between align-items-end">
-                                <span id="currency-deribit" class="text-muted small">--</span>
-                                <span id="funding-rate-deribit" class="fw-bold text-primary fs-5">--</span>
+                                <span id="currency-deribitperp" class="text-muted small">--</span>
+                                <span id="funding-rate-deribitperp" class="fw-bold text-primary fs-5">--</span>
                             </div>
                         </div>
                     </div>
@@ -654,7 +654,7 @@ body.dark-mode.force-black {
                                                 <option value="okx" selected>OKX</option>
                                                 <option value="htx">HTX</option>
                                                 <option value="binance">Binance</option>
-                                                <option value="deribi">Deribit</option>
+                                                <option value="deribit">Deribit</option>
                                             </select>
                                         </div>
                                     </div>
@@ -680,7 +680,7 @@ body.dark-mode.force-black {
                                                 <option value="okx">OKX</option>
                                                 <option value="htx" selected>HTX</option>
                                                 <option value="binance">Binance</option>
-                                                <option value="deribi">Deribit</option>
+                                                <option value="deribit">Deribit</option>
                                             </select>
                                         </div>
                                     </div>
