update binance folders

--- a/client/index.html
+++ b/client/index.html
@@ -230,11 +230,11 @@
                             <div class="d-flex justify-content-between align-items-center mb-2">
                                     <img src="./assets/binance.svg" alt="Binance Logo" class="bn-svg default-icon block " height="24" width="120">
                                 <!-- <h6 class="mb-0 fw-semibold text-muted">BINANCE</h6> -->
-                                <span id="fundingratets_bnb" class="badge  bg-opacity-10 text-warning small">-</span>
+                                <span id="fundingratets-binanceperp" class="badge  bg-opacity-10 text-warning small">-</span>
                             </div>
                             <div class="d-flex justify-content-between align-items-end">
-                                <span id="currency-binance" class="text-muted small">--</span>
-                                <span id="funding-rate-binance" class="fw-bold text-primary fs-5">--</span>
+                                <span id="currency-binanceperp" class="text-muted small">--</span>
+                                <span id="funding-rate-binanceperp" class="fw-bold text-primary fs-5">--</span>
                             </div>
                         </div>
                     </div>
