--- a/client/index.html
+++ b/client/index.html
@@ -986,7 +986,9 @@ body.dark-mode.force-black {
                                                 <option value="none" >EMPTY LEG</option>
                                                 <option value="htx">HTX</option>
                                                 <option value="okx" >OKX</option>
-                                                <option value="deribit" selected>DERIBIT</option>
+                                                <option value="deribit" >DERIBIT</option>
+                                                <option value="binance" selected>BINANCE</option>
+
 
                                                 </select>
                                                 <label for="manual-order-form-exchange-input1">Exchange</label>
