fix table height

--- a/client/index.html
+++ b/client/index.html
@@ -1471,7 +1471,7 @@ body.dark-mode.force-black {
 
             <!-- Order Management System Section -->
             <div id="securedContentOMS" class="col " style="display: none;">
-                <div class="card p-3">
+                <div class="card p-3" style="max-height: 500px;">
                     <!-- <h2 class="text-center">Order Management System (Prototype)</h2> -->
 
                     <!-- Tabs -->
@@ -2010,6 +2010,7 @@ body.dark-mode.force-black {
     .OMStable tbody tr:hover td {
         background-color: #f8f9fa;
     }
+    
     
     /* Empty message styling */
     .dataTables_empty {
