BINANCE SPOT connected

--- a/client/index.html
+++ b/client/index.html
@@ -1088,12 +1088,11 @@ body.dark-mode.force-black {
                                             
                                             <select class="form-select" id="manual-order-form-order-type1" aria-label="Order Type Select" >
                                             <option value="none" disabled>NA</option>
-                                            <option value="limit">LIMIT</option>
+                                            <!-- <option value="limit">LIMIT</option>
                                             <option value="counterparty1" >COUNTERPARTY-1</option>
                                             <option value="counterparty5" >COUNTERPARTY-5</option>
                                             <option value="queue1" selected>QUEUE-1</option>
-
-                                            <option value="market" >MARKET</option>
+                                            <option value="market" >MARKET</option> -->
                                             </select>
                                             <label for="manual-order-form-order-type1">Order Type</label>
                                             
@@ -1106,7 +1105,6 @@ body.dark-mode.force-black {
                                             <option value="counterparty1">COUNTERPARTY-1</option>
                                             <option value="counterparty5" >COUNTERPARTY-5</option>
                                             <option value="queue1" selected>QUEUE-1</option>
-
                                             <option value="market" >MARKET</option>
                                             </select>
                                             <label for="manual-order-form-order-type2">Order Type</label>
