Update place orders

--- a/client/index.html
+++ b/client/index.html
@@ -866,7 +866,7 @@ body.dark-mode.force-black {
                                         <span id="quote-side-text" class="col quote-side-text text-success text-center fw-bold">
                                             Bid (Buy <span id="arbButton-bid-buy"></span> Sell <span id="arbButton-bid-sell"></span>) 
                                         </span>
-                                        <div class="col  quote-price-card buy card p-3 text-center" onclick="handleClick('buy')" role="button" tabindex="0">
+                                        <div class="col  quote-price-card buy card p-3 text-center" onmousedown="handleClick('buy')" role="button" tabindex="0">
                                             <div class="best-quote-price-container">
                                                 <div class="price-data fs-4 fw-bold" id="buySpread">-</div>
                                             </div>
@@ -877,7 +877,7 @@ body.dark-mode.force-black {
                                         </div>
                                 
                                         <!-- Ask Card -->
-                                        <div class="col  quote-price-card sell card p-3 text-center border-danger" onclick="handleClick('sell')" role="button" tabindex="0">
+                                        <div class="col  quote-price-card sell card p-3 text-center border-danger" onmousedown="handleClick('sell')" role="button" tabindex="0">
                                         
                                             <div class="best-quote-price-container">
                                                 <div class="price-data fs-4 fw-bold" id="sellSpread">-</div>
