update positions and table

--- a/client/index.html
+++ b/client/index.html
@@ -1501,7 +1501,7 @@ body.dark-mode.force-black {
                                 </table>
                             </div> -->
 
-                            <div class="table-responsive" style="max-height: 400px;">
+                            <div class="table-responsive" style="max-height: 400px;min-height: 400px">
                                 <table class="table table-borderless table-hover text-nowrap w-100 OMStable">
                                     <thead class="table-light sticky-top">
                                         <tr>
@@ -1555,7 +1555,7 @@ body.dark-mode.force-black {
                         
                             
 
-                            <div class="table-responsive" style="max-height: 400px">
+                            <div class="table-responsive" style="max-height: 400px;min-height: 400px">
                                 <table class="table table-borderless  table-hover  text-nowrap w-100 OpenOrdersTable">
                                     <thead class="table  sticky-top">
                                         <tr>
