--- a/client/index.html
+++ b/client/index.html
@@ -984,8 +984,8 @@ body.dark-mode.force-black {
                                                 <option value="none" >EMPTY LEG</option>
                                                 <option value="htx">HTX</option>
                                                 <option value="okx" >OKX</option>
-                                                <option value="deribit" >DERIBIT</option>
-                                                <option value="binance" selected>BINANCE</option>
+                                                <option value="deribit" selected>DERIBIT</option>
+                                                <option value="binance" >BINANCE</option>
 
 
                                                 </select>
